<resources>
    <string name="app_name">My Application</string>
    <string name="memoryGame">Memory Game</string>
    <string name="playGame">Play</string>
    <string name="rules">Rules</string>
    <string name="highscores">Highscores</string>
    <string name="quitGame">Quit</string>
    <string name="AISelect">AI</string>
    <string name="playerID">Player Options</string>
    <string name="playerNameSelect">Name</string>
    <string name="findplayer">Find Player</string>
    <string name="mode">Mode</string>
    <string name="player">Player</string>
    <string name="wins">Wins</string>
    <string name="pairsoftwocards">Pairs of two cards</string>
    <string name="wins1">Wins1</string>
    <string name="pairsofthreecards">Pairs of three cards</string>
    <string name="battle">Battle</string>
    <string name="wins2">Wins2</string>
    <string name="wins3">Wins3</string>
    <string name="playersearchinfo">Player Search Info</string>
    <string name="searchplayer">Search Player</string>
    <string name="exit">Exit</string>
    <string name="deleteAllPlayers">Delete All Players</string>
    <string name="deletePlayer">Delete Player</string>
    <string name="title_activity_high_scores">HighScores</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="playeroptions">Player Options</string>
    <string name="player2options">Player 2: </string>
    <string name="player1options">Player 1: </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player3">Player3</string>
    <string name="beginner">Beginner</string>
    <string name="novice">Novice</string>
    <string name="expert">Expert</string>
    <string name="previousButton">Back</string>
    <string name="nextButton">Start Game</string>
    <string name="rulesTitle">Rules</string>
    <string name="pairOf2Rules"> Pairs Of 2: A player must find pairs of identical cards in a grid of 28 cards.
    If he finds a pair, he gets a point and gets to play again. However if he doesn\'t find one, it\'s the opponent\'s turn.
    The opponent can either be an AI or a human entity</string>
    <string name="pairOf3Rules">Pairs Of 3: The rules are basically the same as the rules from the "Pairs of 2 Mode", but with the exception that the player has to find three identical cards in a grid of 28 cards. </string>
    <string name="BattleRules">Battle: Two players battle against each other in a game of Pairs of 2. Each player has a grid of 24 cards, and has to find identical pairs. </string>
    <string name="selectMode">Select Mode: </string>
    <string name="pOf2">Pairs Of 2</string>
    <string name="pOf3">Pairs of 3</string>
    <string name="battle1v1">Battle</string>
    <string name="selectPlayers">Players: </string>
    <string name="playerOptions">Next</string>
    <string name="twoPlayers">2 Players</string>
    <string name="threePlayers">3 Players</string>
    <string name="fourPlayers">4 Players</string>
    <string name="mainMenu">Back</string>
    <string name="pairsof_3_cards">pairsof 3 cards</string>
    <string name="pairs_of_2_cards">Pairs of 2 cards</string>
    <string name="pairs_of_3_cards">Pairs of 3 cards</string>


</resources>
