<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.MemoryGameActivities.ModeSelection">

    <TextView
        android:id="@+id/modeSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/selectMode"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/mode_group"
        android:checkedButton="@id/radio_po2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="64dp"
        app:layout_constraintTop_toBottomOf="@+id/modeSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_po2"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:onClick="chooseGameMode"
            android:text="@string/pOf2" />

        <RadioButton
            android:id="@+id/radio_po3"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:onClick="chooseGameMode"
            android:text="@string/pOf3"
            />

        <RadioButton
            android:id="@+id/radio_battle"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:text="@string/battle1v1"
            android:onClick="chooseGameMode" />
    </RadioGroup>

    <TextView
        android:id="@+id/playerSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/selectPlayers"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode_group" />
    <RadioGroup
        android:id="@+id/player_group"
        android:checkedButton="@id/radio_2_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="64dp"
        app:layout_constraintTop_toBottomOf="@+id/playerSelection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_2_players"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:onClick="choosePlayers"
            android:text="@string/twoPlayers" />

        <RadioButton
            android:id="@+id/radio_3_players"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:onClick="choosePlayers"
            android:text="@string/threePlayers" />

        <RadioButton
            android:id="@+id/radio_4_players"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            android:onClick="choosePlayers"
            android:text="@string/fourPlayers" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerOptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_group"
        app:layout_constraintVertical_bias="0.704"
        android:onClick="submitSelections"/>


</androidx.constraintlayout.widget.ConstraintLayout>




