<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/playerOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/playeroptions"
        android:textColor="#F00"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/player1Options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/player1options"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/player1Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerOptions" />

    <EditText
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/playerNameSelect"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/player2Options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player1Options" />

    <TextView
        android:id="@+id/player2Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player2options"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/player2Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player1Name" />

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/playerNameSelect"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/difficultygroup"
        app:layout_constraintEnd_toStartOf="@id/AICheckBox"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player2Options" />

    <CheckBox
        android:id="@+id/AICheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkBoxClicked"
        android:text="@string/AISelect"
        app:layout_constraintBottom_toTopOf="@id/difficultygroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player2Name"
        app:layout_constraintTop_toBottomOf="@id/player2Options"
        app:layout_constraintVertical_bias="0.688" />

    <RadioGroup
        android:id="@+id/difficultygroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player2Name">

        <RadioButton
            android:id="@+id/radio_beginner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonClicked"
            android:text="@string/beginner" />

        <RadioButton
            android:id="@+id/radio_novice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="radioButtonClicked"
            android:text="@string/novice" />

        <RadioButton
            android:id="@+id/radio_expert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonClicked"
            android:text="@string/expert" />
    </RadioGroup>

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="previousActivity"
        android:text="@string/previousButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficultygroup" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="nextActivity"
        android:text="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/previousButton"
        app:layout_constraintTop_toBottomOf="@id/difficultygroup" />

</androidx.constraintlayout.widget.ConstraintLayout>