<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.android.MemoryGameActivities.rulesPage">

    <TextView
        android:id="@+id/rulesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/rulesTitle"
        android:textColor="#FFFFFF"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rulesPairsOf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rulesPairsOf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairOf2Rules"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/rulesPairsOf3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rulesHeader" />

    <TextView
        android:id="@+id/rulesPairsOf3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairOf3Rules"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/rulesBattle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rulesPairsOf2" />

    <TextView
        android:id="@+id/rulesBattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BattleRules"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rulesPairsOf3"
        app:layout_constraintBottom_toTopOf="@id/backButton"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:onClick="goToMainMenu"
        android:text="@string/mainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rulesBattle" />


</androidx.constraintlayout.widget.ConstraintLayout>
